--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,6 +247,10 @@
     <string name="logout">Logout</string>
     <string name="invitations">Invitations</string>
     <string name="event_description">Event Description</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error_permission_not_granted">Cancelling, required permissions are not granted</string>
 </resources>
 
 
